# DynamicOptimalTransport

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: emd.hpp  ett.hpp  lct.hpp  network_simplex.hpp
src/: dyntree.hpp  network_simplex.hpp  pybind11.cpp
